[gd_scene load_steps=26 format=3 uid="uid://8k6uigu3m7aw"]

[ext_resource type="Script" uid="uid://dtymw8ppq7eg6" path="res://scripts/bat.gd" id="1_cnldk"]
[ext_resource type="Texture2D" uid="uid://dhnroyt6342hq" path="res://assets/bat.png" id="2_cnldk"]
[ext_resource type="Texture2D" uid="uid://cbys40sa8ypld" path="res://assets/emotion_points.png" id="3_48wkk"]
[ext_resource type="PackedScene" uid="uid://chuit4muup8jh" path="res://scenes/enemy_health_bar.tscn" id="3_ss3tx"]
[ext_resource type="Texture2D" uid="uid://b3uk1vq3x01wl" path="res://assets/blood_particle.png" id="5_lv0ya"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p5otw"]
atlas = ExtResource("2_cnldk")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_48wkk"]
atlas = ExtResource("2_cnldk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss3tx"]
atlas = ExtResource("2_cnldk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv0ya"]
atlas = ExtResource("2_cnldk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fn3r"]
atlas = ExtResource("2_cnldk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qtcx"]
atlas = ExtResource("2_cnldk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4bhu"]
atlas = ExtResource("2_cnldk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0o7o"]
atlas = ExtResource("2_cnldk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_67y1s"]
atlas = ExtResource("2_cnldk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_p5otw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5otw")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_48wkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss3tx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv0ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fn3r")
}],
"loop": true,
"name": &"fly",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qtcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4bhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0o7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67y1s")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ss3tx"]
size = Vector2(6, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_lv0ya"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5fn3r"]
radius = 266.543

[sub_resource type="AtlasTexture" id="AtlasTexture_mokc4"]
atlas = ExtResource("3_48wkk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pjqi"]
atlas = ExtResource("3_48wkk")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2aq02"]
atlas = ExtResource("3_48wkk")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j5sl"]
atlas = ExtResource("3_48wkk")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_blvm1"]
atlas = ExtResource("3_48wkk")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ss3tx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mokc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pjqi")
}],
"loop": false,
"name": &"exclamation",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2aq02")
}],
"loop": true,
"name": &"none",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j5sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blvm1")
}],
"loop": false,
"name": &"wonder",
"speed": 1.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5fn3r"]
particle_flag_disable_z = true
angular_velocity_min = -1.60933e-05
angular_velocity_max = 714.42
gravity = Vector3(0, 98, 0)

[node name="Bat" type="CharacterBody2D" node_paths=PackedStringArray("sprite")]
script = ExtResource("1_cnldk")
damage = 0
sprite = NodePath("Sprite2D")
hp = 20

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_p5otw")
animation = &"idle"
autoplay = "idle"

[node name="EnemyHealthBar" parent="." node_paths=PackedStringArray("enemy") instance=ExtResource("3_ss3tx")]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = -7.0
max_value = 20.0
enemy = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ss3tx")
one_way_collision = true

[node name="BloodArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BloodArea"]
shape = SubResource("CircleShape2D_lv0ya")

[node name="ChasingArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChasingArea"]
visible = false
shape = SubResource("CircleShape2D_5fn3r")

[node name="EmotionPoint" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_ss3tx")
animation = &"wonder"
autoplay = "none"

[node name="Blood" type="GPUParticles2D" parent="."]
emitting = false
amount = 2
texture = ExtResource("5_lv0ya")
lifetime = 0.7
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_5fn3r")

[connection signal="body_entered" from="BloodArea" to="." method="_on_blood_area_body_entered"]
[connection signal="body_entered" from="ChasingArea" to="." method="_on_chasing_area_body_entered"]
[connection signal="body_exited" from="ChasingArea" to="." method="_on_chasing_area_body_exited"]
